# weather-weaver

./: .gitignore  README.md  pyproject.toml
notebooks/: kitchen.ipynb
tests/services/: test_weather_consumer.py
weather_weaver/: __init__.py  config.py  constants.py  main.py  utils.py
weather_weaver/inputs/ecmwf/: constants.py  open_data.py  processor.py
weather_weaver/inputs/ecmwf/cds/: constants.py  fetcher.py  processor.py  request.py
weather_weaver/inputs/ecmwf/open_data/: constants.py  fetcher.py  processor.py  request.py
weather_weaver/models/: fetcher.py  geo.py  geotagger.py  processor.py  request.py  storage.py
weather_weaver/outputs/localfs/: client.py
weather_weaver/services/: service.py
