[tool.poetry]
name = "weather-weaver"
version = "0.1.0"
description = "Package to fetch and process numercial weather predictions from different providers"
authors = ["Badr Ben m'barek <badr.benb@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_weaver"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
xarray = "^2023.12.0"
zarr = "^2.16.1"
pydantic = "^2.5.3"
dask-geopandas = "^0.3.1"
pyarrow = "^14.0.2"
geopandas = "^0.14.1"
mapclassify = "^2.6.1"
nbformat = "^5.9.2"
structlog = "^23.3.0"
lxml = "^5.0.0"
graphviz = "^0.20.1"
typer = {extras = ["all"], version = "^0.9.0"}
dask = {extras = ["distributed"], version = "^2023.12.1"}
msgpack-numpy = "^0.4.8"

[tool.poetry.group.visualisation.dependencies]
plotly = "^5.18.0"
matplotlib = "^3.8.2"
folium = "^0.15.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
mypy = "^1.8.0"
ruff = "^0.1.9"
rich = "^13.7.0"
pre-commit = "^3.6.0"
bokeh = "^3.3.2"

[tool.poetry.group.ecmwf.dependencies]
ecmwf-opendata = "^0.2.0"
cfgrib = "^0.9.10.4"
cdsapi = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
line-length = 100
indent-width = 4
# Use pydocstyle Google convention
# See https://www.pydocstyle.org/en/stable/error_codes.html
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413", "D100", "D101", "D107",
    "ANN101",
]
exclude = ["__init__.py"]
fixable = ["ALL"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.per-file-ignores]
"test*" = ["D", "ANN"]
